--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ form button:hover {
   color: white;
 }
 
-.toDoContainer {
+.js-toDoContainer {
   display: flex;
   justify-content: center;
   align-items: center;
