--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: linear-gradient(120deg, #f6d365, #fda085);
+  background: linear-gradient(120deg, #7f7fd5, #86a8e7, #91eae4);
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
@@ -33,13 +33,13 @@ form button {
 }
 
 form button {
-  color: #d88771;
+  color: #7f7fd5;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
 form button:hover {
-  background-color: #d88771;
+  background-color: #7f7fd5;
   color: white;
 }
 
@@ -73,7 +73,7 @@ form button:hover {
 
 .delBtn,
 .checkBtn {
-  background-color: #a0837b;
+  background-color: #7f7fd5;
   color: white;
   border: none;
   padding: 0.5rem;
@@ -82,7 +82,7 @@ form button:hover {
 }
 
 .checkBtn {
-  background-color: rgb(33, 199, 144);
+  background-color: #eeb037;
 }
 
 .fa-trash,
@@ -100,6 +100,20 @@ form button:hover {
   opacity: 0;
 }
 
+.select {
+  margin: 0.5rem;
+  position: relative;
+}
+
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  background: #7f7fd5;
+  padding: 0.5rem;
+  right: 0;
+  pointer-events: none;
+}
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -107,26 +121,10 @@ select {
   outline: none;
   border: none;
 
-  color: #ff6f47;
+  color: #7f7fd5;
   width: 10rem;
   cursor: pointer;
   padding: 0.5rem;
   font-size: 1rem;
   font-family: "Poppins", sans-serif;
-}
-
-.select {
-  margin: 0.5rem;
-  position: relative;
-  overflow: hidden;
-}
-
-.select::after {
-  content: "\25BC";
-  position: absolute;
-  background: #ff6f47;
-  top: 0;
-  right: 0;
-  padding: 0.5rem;
-  pointer-events: none;
 }
